# nagios-plugin-ekg

./: .travis.yml  README.md  nagios-plugin-ekg.cabal  stack.yaml
lib/System/Nagios/Plugin/: Ekg.hs
lib/System/Nagios/Plugin/Ekg/: Check.hs  Types.hs
src/: Main.hs
tests/: SampleData.hs
tests/data/: ekg_sample_output.json
