name:                nagios-plugin-ekg
version:             0.1.0.0
synopsis:            Monitor ekg metrics via Nagios
description:         A generic Nagios plugin which retrieves metrics
                     from an application which uses
                     <ekg http://hackage.haskell.org/package/ekg>.
homepage:            https://github.com/fractalcat/nagios-plugin-ekg
license:             MIT
license-file:        LICENSE
author:              Sharif Olorin
maintainer:          sio@tesser.org
copyright:           2015 Sharif Olorin
category:            System
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:     System.Nagios.Plugin.Ekg
  build-depends:       base >= 4.7 && <5,
                       nagios-check >= 0.3.1,
                       aeson,
                       wreq,
                       text
  hs-source-dirs:      lib
  default-language:    Haskell2010

executable check_ekg
  main-is:             Main.hs
  build-depends:       base >=4.7 && <5,
                       nagios-check,
                       text,
                       nagios-plugin-ekg
  hs-source-dirs:      src
  default-language:    Haskell2010